--- a/activiti-cloud-full-example/values.yaml
+++ b/activiti-cloud-full-example/values.yaml
@@ -26,7 +26,7 @@ global:
     host: '{{ template "common.gateway-host" . }}'
 
     ## Set full url to configure external Keycloak, https://my.keycloak.com/auth
-    # if not set, keycloak deployment is automatically exposed on gaetway host, i.e. http://activiti-cloud-gateway.REPLACEME/auth
+    # if not set, keycloak deployment is automatically exposed on gaetway host, i.e. http://activiti-cloud-gateway.192.168.100.86.nip.io/auth
     url: ""
 
     ## Configure Keycloak realm
@@ -51,7 +51,7 @@ global:
 
     ## Set to configure gateway domain template, i.e. {{ .Release.Namespace }}.1.3.4.5.nip.io
     #  helm upgrade activiti . --install --set global.gateway.domain=1.2.3.4.nip.io
-    domain: "REPLACEME"
+    domain: "192.168.100.86.nip.io"
 
     ## Configure global annotations for all service ingresses, i.e. 
     annotations: 
